# lb-tui

./: .env.template  .gitignore  README.md  flake.nix  lb.py  lb_tui.py  pyproject.toml
lb/: api.py  config.py  player.py  tui.py
lb_cli/: __main__.py  api.py  cli.py  config.py  player.py  tui.py
